Fixes padding bug on small viewports (#421)
* Fixes padding bug on small viewports
* Fixes padding-left of breadcrumb

--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -1,14 +1,23 @@
 .breadcrumb-wrapper {
-  padding: .75rem 0;
+  padding: .75rem 1rem;
   display: block;
   background-color: var(--theme-breadcrumb-bg-color);
   border-bottom: 1px solid var(--theme-breadcrumb-border-color);
+  @media screen and (min-width: 1024px){
+    padding: .75rem 0;
+  }
 }
 .breadcrumb {
-  margin-bottom: 0;
   @extend .rounded-0;
   @extend .border-0;
+  margin-bottom: 0;
   background-color: var(--theme-breadcrumb-bg-color);
+  @media screen and (min-width: 1024px){
+    padding-left: 1rem;
+  }
+  @media screen and (min-width: 1200px){
+    padding-left: 1.5rem;
+  }
 }
 .breadcrumb-item {
   display: none;
